--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
 
+    Colorful bar chart
+    <div class="bars">
 
+    </div>
+    <div class="">
+
+    </div>
     <script src="d3.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
   </body>
